--- a/content/dpa/en.mdx
+++ b/content/dpa/en.mdx
@@ -67,4 +67,20 @@ This DPA explains how Eleva.care handles personal data—clearly and simply.
 
 ---
 
+## 12) Subprocessors and change notifications
+
+We rely on carefully vetted subprocessors to operate the platform. Each subprocessor is bound by a DPA and receives only the minimum data required.
+
+| Provider | Purpose                     | Data                                             | Region/Hosting             | Safeguards                                               |
+| -------- | --------------------------- | ------------------------------------------------ | -------------------------- | -------------------------------------------------------- |
+| Neon     | Primary database            | Platform data; clinical data at rest (encrypted) | EU (Frankfurt)             | DPA, SCCs (if applicable), encryption at rest/in transit |
+| Vercel   | Application hosting / edge  | Platform metadata, logs                          | EU regions where available | DPA, SCCs (if applicable)                                |
+| Upstash  | Caching/queue               | Non-clinical cache data                          | EU                         | DPA, SCCs (if applicable)                                |
+| Resend   | Transactional email         | Email metadata and content                       | IE/EU                      | DPA, SCCs (if applicable)                                |
+| Novu     | Notifications orchestration | Notification payload metadata                    | EU endpoint                | DPA, SCCs (if applicable)                                |
+| Clerk    | Identity/SSO                | Auth and profile metadata                        | EU options                 | DPA, SCCs (if applicable)                                |
+| Stripe   | Payments                    | Payment metadata (no card PAN stored by us)      | EU/EEA                     | PCI DSS L1, DPA, SCCs                                    |
+
+Change notifications: we will update this list and provide notice at least 30 days before adding or replacing a subprocessor (except where immediate change is required for security, compliance, or continuity). Controllers may object on reasonable, documented grounds. We will work in good faith to mitigate or, if unresolved, allow service termination for the affected processing without penalty.
+
 Contact (DPO): `dpo@eleva.care` · Operator: BÚZIOS E TARTARUGAS – LDA (Eleva.care), NIPC/VAT 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Support `support@eleva.care`.
