--- a/content/payment-policies/pt.mdx
+++ b/content/payment-policies/pt.mdx
@@ -60,17 +60,28 @@ Se houve erro do sistema ou caso excecional, contacte o suporte em 48 h com a re
 - Encriptação e deteção de fraude; transações suspeitas podem atrasar/ser recusadas
 - Verificação adicional pode ser exigida em pagamentos de alto valor
 
-## 9) Pagamentos falhados
+## 9) Chargebacks e disputas
+
+- Se o titular abrir uma disputa (chargeback), seguimos o processo da Stripe e fornecemos evidências (registos de marcação, comunicações, políticas). Enquanto a disputa estiver aberta, pagamentos relacionados ao especialista podem ser atrasados.
+- O resultado é determinado pela rede do cartão. Se for a seu favor, os fundos são libertados; caso contrário, o débito é revertido conforme regras da rede.
+- Fraudes/chargebacks repetidos podem resultar em restrições temporárias ou revisão de conta.
+
+## 10) Autenticação Forte do Cliente (3DS/PSD2)
+
+- Onde exigido (p. ex., EEE), usamos 3D Secure para cumprir a PSD2.
+- Se o desafio 3DS falhar, o pagamento não pode ser concluído; pode tentar outra carta ou método.
+
+## 11) Pagamentos falhados
 
 - Cancelam automaticamente a marcação; notificamos por email
 - Volte a tentar com novo pagamento; falhas repetidas podem restringir temporariamente
 
-## 10) Suporte e reembolsos
+## 12) Suporte e reembolsos
 
 - Pagamentos: `support@eleva.care` (objetivo de resposta em 24 h)
 - Reembolsos: solicite em até 7 dias; emergências médicas caso a caso; cancelamentos conforme os Termos
 
-## 11) Atualizações e conformidade
+## 13) Atualizações e conformidade
 
 - Podemos atualizar estas políticas; o uso contínuo implica aceitação
 - Cumprimos proteção do consumidor PT, PSD2 UE, RGPD e termos da Stripe
