--- a/content/privacy/br.mdx
+++ b/content/privacy/br.mdx
@@ -31,13 +31,25 @@ Cookies suportam funções essenciais e analytics. Você pode gerenciá‑los no
 
 Bases legais: execução de contrato, interesses legítimos (segurança, melhoria), consentimento (quando necessário) e cumprimento legal. Para dados clínicos, os profissionais se baseiam em bases de saúde (ex.: GDPR art. 9(2)(h)); o armazenamento também pode se basear no seu consentimento explícito.
 
+### Bases legais e retenção (resumo)
+
+| Categoria                                    | Finalidade                               | Base legal (GDPR/LGPD)                                                       | Retenção                                                                                 |
+| -------------------------------------------- | ---------------------------------------- | ---------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------- |
+| Dados de conta                               | Fornecer conta/serviços; comunicações    | Contrato; Interesses legítimos (serviço/segurança)                           | Enquanto a conta estiver ativa; se inativa, aviso em 12 meses e exclusão em até 24 meses |
+| Agendamentos (agendas, histórico, mensagens) | Agendamentos, suporte, qualidade         | Contrato; Interesses legítimos                                               | ~24 meses após última atividade                                                          |
+| Metadados de pagamentos                      | Processamento, reembolsos, contabilidade | Obrigação legal; Contrato                                                    | Até 10 anos (fiscal/contábil)                                                            |
+| Analytics/telemetria                         | Melhorar produto, segurança              | Interesses legítimos; Consentimento quando aplicável                         | Até 12 meses (depois agregado/anon.)                                                     |
+| Logs de segurança                            | Prevenção de abuso, forense              | Interesses legítimos; Obrigações legais                                      | Mínimo 12 meses                                                                          |
+| Backups                                      | Continuidade, DR                         | Interesses legítimos                                                         | ~30 dias (criptografados)                                                                |
+| Notas/arquivos clínicos                      | Atendimento pelo especialista            | GDPR art. 9(2)(h) (especialista Controlador); Consentimento quando aplicável | Conforme instruções do especialista e lei de saúde                                       |
+
 ## 4) Compartilhamento
 
 - Com operadores que nos ajudam a operar (Stripe, Clerk, Vercel, Neon, Novu, PostHog, Resend, Upstash). Atuam sob contrato e não podem usar dados para fins próprios.
 - Quando exigido por lei ou para proteger direitos e segurança
 - Em transação societária, com aviso
 
-Veja nosso [Acordo de Processamento de Dados](/legal/dpa) para a lista atual de subprocessadores e salvaguardas.
+Veja nosso [Acordo de Processamento de Dados](/pt-BR/legal/dpa) para a lista atual de subprocessadores e salvaguardas.
 
 ## 5) Retenção (prazos)
 
@@ -57,7 +69,7 @@ Como exercer: `privacy@eleva.care` ou `dpo@eleva.care`. Respondemos em 1 mês (G
 
 ## 7) Segurança
 
-Criptografia em trânsito e repouso, menor privilégio, auditoria e monitoramento contínuo. Nenhum sistema é 100% seguro, mas trabalhamos para proteger seus dados. Veja nossa página de [Segurança](/legal/security).
+Criptografia em trânsito e repouso, menor privilégio, auditoria e monitoramento contínuo. Nenhum sistema é 100% seguro, mas trabalhamos para proteger seus dados. Veja nossa página de [Segurança](/pt-BR/legal/security).
 
 ## 8) Transferências internacionais
 
