--- a/content/privacy/es.mdx
+++ b/content/privacy/es.mdx
@@ -31,13 +31,25 @@ Las cookies permiten funciones esenciales y analítica. Puede gestionarlas en su
 
 Bases legales: ejecución de contrato, intereses legítimos (seguridad, mejora), consentimiento (cuando corresponda) y cumplimiento legal. Para datos clínicos, los profesionales se amparan en bases de atención sanitaria (p. ej., RGPD art. 9(2)(h)); el almacenamiento puede basarse en su consentimiento explícito.
 
+### Bases legales y conservación (resumen)
+
+| Categoría                               | Finalidad                                | Base legal (RGPD/LGPD)                                                      | Conservación                                                                            |
+| --------------------------------------- | ---------------------------------------- | --------------------------------------------------------------------------- | --------------------------------------------------------------------------------------- |
+| Datos de cuenta                         | Proveer cuenta/servicios; comunicaciones | Contrato; Interés legítimo (servicio/seguridad)                             | Mientras la cuenta esté activa; si inactiva, aviso a los 12 meses y borrado en 24 meses |
+| Reservas (agendas, historial, mensajes) | Reservas, soporte, calidad               | Contrato; Interés legítimo                                                  | ~24 meses tras la última actividad                                                      |
+| Metadatos de pagos                      | Pagos, reembolsos, contabilidad          | Obligación legal; Contrato                                                  | Hasta 10 años (facturación)                                                             |
+| Analítica/telemetría                    | Mejora de producto, seguridad            | Interés legítimo; Consentimiento cuando aplique                             | Hasta 12 meses (luego agregado/anon.)                                                   |
+| Logs de seguridad                       | Prevención de abuso, forense             | Interés legítimo; Obligaciones legales                                      | Mínimo 12 meses                                                                         |
+| Copias de seguridad                     | Continuidad, recuperación                | Interés legítimo                                                            | ~30 días (cifradas)                                                                     |
+| Notas/archivos clínicos                 | Atención por el especialista             | RGPD art. 9(2)(h) (especialista Responsable); Consentimiento cuando aplique | Según instrucciones del especialista y ley sanitaria                                    |
+
 ## 4) Compartición
 
 - Con encargados que nos ayudan a operar (Stripe, Clerk, Vercel, Neon, Novu, PostHog, Resend, Upstash). Actúan bajo contrato y no pueden usar datos para fines propios.
 - Si la ley lo requiere o para proteger derechos y seguridad
 - En una transacción corporativa, con aviso previo
 
-Vea nuestro [Acuerdo de Procesamiento de Datos](/legal/dpa) para la lista de subencargados y salvaguardas.
+Vea nuestro [Acuerdo de Procesamiento de Datos](/es/legal/dpa) para la lista de subencargados y salvaguardas.
 
 ## 5) Conservación (tiempos)
 
@@ -57,7 +69,7 @@ Cómo ejercerlos: `privacy@eleva.care` o `dpo@eleva.care`. Respondemos en 1 mes 
 
 ## 7) Seguridad
 
-Ciframos en tránsito y en reposo, aplicamos mínimo privilegio, auditoría y monitorización continua. Ningún sistema es 100% seguro, pero trabajamos para proteger sus datos. Vea nuestra página de [Seguridad](/legal/security).
+Ciframos en tránsito y en reposo, aplicamos mínimo privilegio, auditoría y monitorización continua. Ningún sistema es 100% seguro, pero trabajamos para proteger sus datos. Vea nuestra página de [Seguridad](/es/legal/security).
 
 ## 8) Transferencias internacionales
 
