--- a/content/privacy/pt.mdx
+++ b/content/privacy/pt.mdx
@@ -31,13 +31,25 @@ Cookies suportam funcionalidades essenciais e analítica. Pode geri‑las no nav
 
 Bases legais: execução de contrato, interesses legítimos (segurança, melhoria), consentimento (quando necessário) e cumprimento legal. Para dados clínicos, os profissionais baseiam‑se em bases de cuidados de saúde (p. ex., RGPD art. 9.º, n.º 2, al. h)); o armazenamento pode também basear‑se no seu consentimento explícito.
 
+### Bases legais e conservação (resumo)
+
+| Categoria                                 | Finalidade                                | Base legal (RGPD/LGPD)                                                                  | Conservação                                                                             |
+| ----------------------------------------- | ----------------------------------------- | --------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------- |
+| Dados de conta                            | Prestação de conta/serviços; comunicações | Contrato; Interesses legítimos (serviço/segurança)                                      | Enquanto a conta estiver ativa; se inativa, aviso aos 12 meses e eliminação em 24 meses |
+| Marcações (agendas, histórico, mensagens) | Marcações, suporte, qualidade             | Contrato; Interesses legítimos                                                          | ~24 meses após última atividade                                                         |
+| Metadados de pagamentos                   | Pagamentos, reembolsos, contabilidade     | Obrigação legal; Contrato                                                               | Até 10 anos (faturação)                                                                 |
+| Analítica/telemetria                      | Melhoria de produto, segurança            | Interesses legítimos; Consentimento quando aplicável                                    | Até 12 meses (depois agregado/anon.)                                                    |
+| Registos de segurança                     | Prevenção de abuso, forense               | Interesses legítimos; Obrigações legais                                                 | Mínimo 12 meses                                                                         |
+| Backups                                   | Continuidade, recuperação                 | Interesses legítimos                                                                    | ~30 dias (cifrados)                                                                     |
+| Notas/ficheiros clínicos                  | Prestação de cuidados pelo especialista   | RGPD art. 9.º, n.º 2, al. h) (especialista Responsável); Consentimento quando aplicável | Conforme instruções do especialista e lei de saúde                                      |
+
 ## 4) Partilha
 
 - Com subcontratantes que ajudam a operar (Stripe, Clerk, Vercel, Neon, Novu, PostHog, Resend, Upstash). Atuam sob contrato e não podem usar dados para fins próprios.
 - Se exigido por lei ou para proteger direitos e segurança
 - Numa transação societária, com aviso
 
-Veja o nosso [Acordo de Processamento de Dados](/legal/dpa) para a lista atual de subprocessadores e salvaguardas.
+Veja o nosso [Acordo de Processamento de Dados](/pt/legal/dpa) para a lista atual de subprocessadores e salvaguardas.
 
 ## 5) Conservação (prazos)
 
@@ -57,7 +69,7 @@ Como exercer: `privacy@eleva.care` ou `dpo@eleva.care`. Respondemos em 1 mês (R
 
 ## 7) Segurança
 
-Ciframos em trânsito e em repouso, aplicamos menor privilégio, auditoria e monitorização contínua. Nenhum sistema é 100% seguro, mas trabalhamos para proteger os seus dados. Veja a página de [Segurança](/legal/security).
+Ciframos em trânsito e em repouso, aplicamos menor privilégio, auditoria e monitorização contínua. Nenhum sistema é 100% seguro, mas trabalhamos para proteger os seus dados. Veja a página de [Segurança](/pt/legal/security).
 
 ## 8) Transferências internacionais
 
