--- a/content/terms/br.mdx
+++ b/content/terms/br.mdx
@@ -59,6 +59,8 @@ Ao usar a Eleva.care, você declara e garante que:
 - Salvo quando a lei exigir, taxas não são reembolsáveis
 - Ajudaremos a resolver problemas de pagamento
 
+Consulte nossas [Políticas de Pagamento](/pt-BR/legal/payment-policies#9-chargebacks-e-disputas) para detalhes sobre chargebacks, PSD2/3DS, pagamentos com falha e reembolsos.
+
 ## 8) Privacidade
 
 Seu uso é regido pela nossa Política de Privacidade. Tratamos dados pessoais conforme a lei aplicável, incluindo o GDPR e a LGPD, quando pertinente.
