--- a/content/terms/en.mdx
+++ b/content/terms/en.mdx
@@ -59,6 +59,8 @@ By using Eleva.care, you represent and warrant that you:
 - Unless the law requires otherwise, fees are generally non‑refundable
 - If there’s a payment issue, we’ll help you resolve it
 
+See our [Payment Policies](/legal/payment-policies#9-chargebacks-and-disputes) for details on chargebacks, PSD2/3DS, failed payments, and refunds.
+
 ## 8) Privacy
 
 Your use is governed by our Privacy Policy. We process personal data in line with applicable law, including the GDPR where relevant.
