--- a/content/terms/es.mdx
+++ b/content/terms/es.mdx
@@ -59,6 +59,8 @@ Al usar Eleva.care, declara y garantiza que:
 - Salvo lo que exija la ley, las tarifas no son reembolsables
 - Si hay un problema de pago, le ayudaremos a resolverlo
 
+Consulte nuestras [Políticas de Pago](/es/legal/payment-policies#9-contracargos-y-disputas) para detalles sobre contracargos, PSD2/3DS, pagos fallidos y reembolsos.
+
 ## 8) Privacidad
 
 Su uso se rige por nuestra Política de Privacidad. Tratamos datos personales conforme a la ley aplicable, incluido el RGPD cuando corresponda.
