--- a/content/security/pt.mdx
+++ b/content/security/pt.mdx
@@ -10,7 +10,7 @@ Levamos a segurança a sério. Abaixo segue um resumo claro e direto de como pro
 - Base de dados preparada para HIPAA (Neon.tech) com BAA celebrado
 - Fornecedores com certificações sólidas: Clerk, Stripe, Vercel, Neon (SOC 2 Type II), Stripe (PCI DSS L1)
 - Práticas alinhadas com ISO 27001 em desenvolvimento e operações
-- Detalhes e lista completa de subprocessadores no nosso [Acordo de Processamento de Dados](/legal/dpa)
+- Detalhes e lista completa de subprocessadores no nosso [Acordo de Processamento de Dados](/pt/legal/dpa)
 
 ## 2) Salvaguardas técnicas
 
@@ -19,6 +19,32 @@ Levamos a segurança a sério. Abaixo segue um resumo claro e direto de como pro
 - Rede: WAF, mitigação DDoS, rate limiting rigoroso, gateway de API seguro
 - Base de dados: pgAudit, apenas SSL, políticas ao nível de linhas, backups automatizados
 - Pagamentos: processados pelo Stripe; não armazenamos cartões; suporte a 3DS
+
+### Cabeçalhos de segurança e CSP
+
+Aplicamos cabeçalhos alinhados à OWASP:
+
+```
+Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
+X-Content-Type-Options: nosniff
+Referrer-Policy: strict-origin-when-cross-origin
+Permissions-Policy: geolocation=(), microphone=(), camera=(), interest-cohort=()
+X-Frame-Options: DENY  # ou frame-ancestors 'none' na CSP
+Content-Security-Policy: default-src 'self';
+  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.vercel.app https://*.stripe.com;
+  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+  img-src 'self' data: https://res.cloudinary.com;
+  font-src 'self' https://fonts.gstatic.com;
+  connect-src 'self' https://api.stripe.com https://*.posthog.com https://*.upstash.io;
+  frame-src https://*.stripe.com https://*.google.com;
+  frame-ancestors 'none';
+  upgrade-insecure-requests;
+```
+
+Notas:
+
+- Ajustamos as origens por ambiente e minimizamos permissões.
+- Preferimos frame-ancestors na CSP ao invés de X-Frame-Options quando suportado.
 
 ## 3) Contas e acessos
 
@@ -53,7 +79,7 @@ Levamos a segurança a sério. Abaixo segue um resumo claro e direto de como pro
 
 - Recolhemos o mínimo necessário e retemos apenas o tempo necessário
 - Pode aceder, retificar, apagar, limitar, portar ou opor‑se; contacte `privacy@eleva.care` ou `dpo@eleva.care`
-- Consulte a nossa [Política de Privacidade](/legal/privacy)
+- Consulte a nossa [Política de Privacidade](/pt/legal/privacy)
 
 ## 9) Resiliência
 
