--- a/content/terms/pt.mdx
+++ b/content/terms/pt.mdx
@@ -59,6 +59,8 @@ Ao usar a Eleva.care, você declara e garante que:
 - Salvo quando a lei exigir, taxas não são reembolsáveis
 - Ajudaremos a resolver problemas de pagamento
 
+Consulte as nossas [Políticas de Pagamento](/pt/legal/payment-policies#9-chargebacks-e-disputas) para detalhes sobre chargebacks, PSD2/3DS, pagamentos falhados e reembolsos.
+
 ## 8) Privacidade
 
 O uso é regido pela nossa Política de Privacidade. Tratamos dados pessoais conforme a lei aplicável, incluindo o RGPD quando pertinente.
